--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     .hero {
   height: 100vh;
-  background: url('/Images/20250729_114614.jpg');
+  background: url('Images/20250729_114614.jpg');
   color: var(--white);
   padding: 200px;
   text-align: center;
