--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
-        <img width="200" src="/Images/Logo.png" class="me-2" alt="Logo" style="animation: pulse 2s infinite;">
+        <img width="200" src="Images/Logo.png" class="me-2" alt="Logo" style="animation: pulse 2s infinite;">
       </a>
       <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon "></span>
