--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 <body>
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg sticky-top">
+  <nav class="navbar navbar-expand-lg Fixed-top">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
         <img width="200" src="Images/Logo.png" class="me-2" alt="Logo" style="animation: pulse 2s infinite;">
