--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 <body>
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg Fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
         <img width="200" src="Images/Logo.png" class="me-2" alt="Logo" style="animation: pulse 2s infinite;">
@@ -315,7 +315,7 @@
         <button class="btn btn-outline-primary active" onclick="filterSelection('all')">All</button>
         <button class="btn btn-outline-primary" onclick="filterSelection('logo')">Logos</button>
         <button class="btn btn-outline-primary" onclick="filterSelection('flyer')">Flyers</button>
-        <button class="btn btn-outline-primary" onclick="filterSelection('web')">Web Design</button>
+        <button class="btn btn-outline-primary" onclick="filterSelection('web')">Branding</button>
       </div>
       <div class="row" id="portfolioGrid">
         <div class="col-md-4 mb-4 portfolio-item logo" data-aos="fade-up">
