--- a/index.html
+++ b/index.html
@@ -296,8 +296,17 @@
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
           <div class="card p-4 text-center">
             <div class="services-icon mb-3"><i class="bi bi-phone"></i></div>
-            <h5 class="fw-bold">Phone Repair Services</h5>
-            <p>Fast, reliable repairs for smartphones and tablets. From screen replacements to software fixes, we restore your devices with precision and care so you stay connected without hassle.</p>
+            <h5 class="fw-bold">Branding</h5>
+            <p>Build a strong brand identity that speaks your values. We craft cohesive visuals and messaging that leave a lasting impression.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+          <div class="card p-4 text-center">
+            <div class="services-icon mb-3"><i class="bi bi-phone"></i></div>
+            <h5 class="fw-bold">Printing Services</h5>
+            <p>High-quality prints that bring your designs to life. From business cards to banners, we deliver sharp, vibrant, and professional results.</p>
           </div>
         </div>
       </div>
