--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                     <li class="nav-item"><a class="nav-link" href="#about"><strong>About</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio"><strong>Portfolio</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact"><strong>Contact</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimonials"><strong>Testimonial</strong></a></li>
                 </ul>
             </div>
         </div>
