--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         .navbar {
             background-color: var(--purple);
             transition: background-color 0.3s ease-in-out;
+            width: 100%;
         }
 
         .navbar a {
@@ -438,7 +439,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
                 <img width="180" src="Images/Logo.png" class="me-2" alt="K-Fabason Digital Concept Logo"
