--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -439,6 +439,7 @@
 </head>
 
 <body>
+<!--     Navbar -->
     <nav class="navbar fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
@@ -460,7 +461,8 @@
             </div>
         </div>
     </nav>
-
+<!--     //navbar -->
+<!--     Hero -->
     <section class="hero" data-aos="fade-in">
         <div class="container">
             <h1 class="display-4">Creativity That Speaks</h1>
@@ -468,6 +470,7 @@
             <a href="#contact" class="btn btn-primary btn-lg">Place Your Order</a>
         </div>
     </section>
+<!--     //hero -->
 
     <section id="services" class="py-5">
         <div class="container">
@@ -640,7 +643,7 @@
             </div>
         </div>
     </section>
-
+<!--      Contact -->
     <section id="contact" class="py-5">
         <div class="container">
             <div class="text-center mb-4">
@@ -690,7 +693,7 @@
     <section id="testimonials" class="py-5 bg-white">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="fw-bold text-primary" data-aos="zoom-in">What Clients Say</h2>
+                <h2 class="fw-bold text-primary mt-7" data-aos="zoom-in">What Clients Say</h2>
                 <p class="text-muted">Hear directly from those who’ve worked with us.</p>
             </div>
             <div class="swiper testimonialSwiper">
