--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 <body>
 <!--     Navbar -->
-    <nav class="navbar fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
                 <img width="180" src="Images/Logo.png" class="me-2" alt="K-Fabason Digital Concept Logo"
