--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             font-family: 'Poppins', sans-serif;
             line-height: 1.6;
             color: #333;
+            overflow-x: hidden;
         }
 
         /* Animations */
@@ -62,6 +63,7 @@
             background-color: var(--purple);
             transition: background-color 0.3s ease-in-out;
             width: 100%;
+            height: 100vh;
         }
 
         .navbar a {
