--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         /* Navbar */
         .navbar {
-            background-color: var(--purple);
+            background-color: var(--blus);
             transition: background-color 0.3s ease-in-out;
             width: 100%;
         }
